Fixes as per feedback: revert comment icons to absolute positioning, remove bold on highlighted comment text in drafttail, ensure spacing for field-rows and comments. Move comment buttons for choosers inside the chooser template

--- a/client/scss/components/_chooser.scss
+++ b/client/scss/components/_chooser.scss
@@ -31,7 +31,8 @@
   }
 }
 
-.chosen {
+.chosen,
+.unchosen {
   display: flex;
   gap: theme('spacing.4');
   align-items: center;
@@ -64,16 +65,27 @@
   @apply w-body-text-large;
 }
 
-@media (hover: hover) {
-  .chooser__actions {
-    opacity: 0;
-  }
+// Hiding for devices capable of hover states only,
+// with opacity only so keyboard focus can move to the first interactive element to reveal it.
+//@media (hover: hover) {
+//  .chooser__actions {
+//    opacity: 0;
+//  }
+//
+//  .w-field__input:hover,
+//  .w-field__input:focus-within {
+//    .chooser__actions {
+//      opacity: 1;
+//    }
+//  }
+//}
 
-  .w-field__input:hover,
-  .w-field__input:focus-within {
-    // Hiding for devices capable of hover states only,
-    // with opacity only so keyboard focus can move to the first interactive element to reveal it.
-    .chooser__actions {
+.chooser__actions {
+  @media (hover: hover) {
+    opacity: 0;
+
+    .chooser:hover &,
+    .chooser:focus-within & {
       opacity: 1;
     }
   }
